--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>Plivo JS</title>
         <link href="/static/css/bootstrap.css" rel="stylesheet">
         <script language="javascript" content-type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.js"></script>
-        <script type="text/javascript" src="./plivo.js"></script>
+        <script type="text/javascript" src="./plivo.min.js"></script>
         
 	<script>
 		var call_state;
