self host jquery

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Plivo JS</title>
         <link href="/static/css/bootstrap.css" rel="stylesheet">
-        <script language="javascript" content-type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.js"></script>
+        <script language="javascript" content-type="text/javascript" src="./jquery.js"></script>
         <script type="text/javascript" src="./plivo.min.js"></script>
         
 	<script>
@@ -171,7 +171,7 @@
         </script>
     
 	   <style type="text/css">
-       #plivo_flash_placeholder {
+       #livo_flash_placeholder {
             width: 220;
             height: 150;
         }
