Config isn't really needed now

--- a/phone.html
+++ b/phone.html
@@ -257,9 +257,8 @@
         Plivo.onMediaPermission = onMediaPermission;
 	Plivo.onIncomingCall = onIncomingCall;
 	Plivo.onIncomingCallCancelled = onIncomingCallCancelled;
-        config = {
-        };
-        Plivo.init(config);
+
+        Plivo.init();
 
     });
 
