--- a/phone/phone.html
+++ b/phone/phone.html
@@ -208,7 +208,7 @@
           IncomingCallUI();
       }
 
-      function onIncomingCallCancelled() {
+      function onIncomingCallCanceled() {
           callUI();
       }
 
@@ -245,7 +245,7 @@
         Plivo.onCallFailed = onCallFailed;
         Plivo.onMediaPermission = onMediaPermission;
         Plivo.onIncomingCall = onIncomingCall;
-        Plivo.onIncomingCallCancelled = onIncomingCallCancelled;
+        Plivo.onIncomingCallCanceled = onIncomingCallCanceled;
 
         Plivo.init();
 
