--- a/phone/phone.html
+++ b/phone/phone.html
@@ -28,7 +28,7 @@
     </style>
 
     <script language="javascript" content-type="text/javascript" src="./assets/jquery.js"></script>
-    <script type="text/javascript" src="./plivo.min.js"></script>
+    <script type="text/javascript" src="https://s3.amazonaws.com/plivoweb-sdk/plivo.min.js"></script>
 
     <script type="text/javascript">
 
