--- a/example1.html
+++ b/example1.html
@@ -212,8 +212,8 @@
         $('#linkMute').show('slow');
       }
 
-      function onIncomingCall(display_name, user_name, extraHeaders) {
-        console.log("onIncomingCall:"+user_name + "("+display_name+")")
+      function onIncomingCall(account_name, extraHeaders) {
+        console.log("onIncomingCall:"+account_name);
         console.log("extraHeaders=");
         for (var key in extraHeaders) {
           console.log("key="+key+".val="+extraHeaders[key]);
