remove fallback_to_flash

--- a/phone/phone.html
+++ b/phone/phone.html
@@ -246,10 +246,7 @@
         Plivo.onMediaPermission = onMediaPermission;
         Plivo.onIncomingCall = onIncomingCall;
         Plivo.onIncomingCallCanceled = onIncomingCallCanceled;
-        config = {
-          'fallback_to_flash':true
-        };
-        Plivo.init(config);
+        Plivo.init();
 
     });
 
